CI workflow should only run for code/data changes
Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,8 @@
-on: [push]
+on:
+  push:
+    paths:
+    - 'pdns_auth_zone.py'
+    - 'api-swagger.json'
 
 jobs:
   test:
@@ -6,4 +10,3 @@ jobs:
     container: kpfleming/apaz-test-images:pdns4.3-python3
     steps:
     - uses: actions/checkout@v2
-
