--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ on:
     paths:
     - 'pdns_auth_zone.py'
     - 'api-swagger.json'
+    - 'tests/*'
+    - '.github/workflow/*'
 
 jobs:
   test:
@@ -10,3 +12,7 @@ jobs:
     container: kpfleming/apaz-test-images:pdns4.3-python3
     steps:
     - uses: actions/checkout@v2
+    - name: start pdns_server
+      run: tests/start_server.sh
+    - name: stop pdns_server
+      run: kill $(cat /run/pdns.pid)
