--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: kpfleming/apaz-test-images:pdns4.3-python3
+    container:
+      image: docker://quay.io/kpfleming/apaz-test-images:pdns4.3-python3
     steps:
     - uses: actions/checkout@v2
     - name: start pdns_server
