Tighten up path list for CI workflow
Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,9 @@ on:
     paths:
     - 'pdns_auth_zone.py'
     - 'api-swagger.json'
-    - 'tests/*'
-    - '.github/workflow/*'
+    - 'tests/playbook.yml'
+    - 'tests/start_server.sh'
+    - '.github/workflows/ci.yml'
 
 jobs:
   test:
