--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,8 +23,8 @@ jobs:
         sudo sh -c "echo 'deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/x${ID^}_${VERSION_ID}/ /' > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list"
         wget -nv https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable/x${ID^}_${VERSION_ID}/Release.key -O Release.key
         sudo apt-key add - < Release.key
-        sudo apt-get update --quiet=2
-        sudo apt-get install --quiet=2 --yes buildah
+        sudo apt-get --quiet=2 update
+        sudo apt-get --quiet=2 --yes install buildah
     - name: build image
       run: tests/make_container.sh
     - name: publish image
