Publish image after build
Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -27,6 +27,9 @@ jobs:
         sudo apt-get --quiet=2 --yes install buildah
     - name: build image
       run: tests/make_container.sh
-    - name: publish image
+    - name: login to quay.io
       if: github.event_name != 'pull_request'
-      run: echo "publish image"
+      run: buildah login -u="kpfleming" -p="${{ secrets.QUAY_TOKEN }}" quay.io
+    - name: publish image to quay.io
+      if: github.event_name != 'pull_request'
+      run: buildah push quay.io/kpfleming/apaz-test-images:pdns4.3-python3
