Add matrix-build for various PowerDNS Auth versions
Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,10 +14,12 @@ on:
   schedule:
     - cron: "15 4 * * 6"
 
-# bring in quay.io token as an env variable set from GitHub secret
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        pdns: [4.2, 4.3, master]
     steps:
     - name: checkout code
       uses: actions/checkout@v2
@@ -30,7 +32,7 @@ jobs:
         sudo apt-get --quiet=2 update
         sudo apt-get --quiet=2 --yes install buildah
     - name: build image
-      run: tests/make_container.sh
+      run: tests/make_container.sh ${{ matrix.pdns }}
     - name: display image name
       run: echo ${new_image}
     - name: login to quay.io
