Trigger CI job after images are built and published
Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ on:
     - 'tests/playbook.yml'
     - 'tests/start_server.sh'
     - '.github/workflows/ci.yml'
+  repository_dispatch:
+    types: [trigger-ci]
 
 jobs:
   test:
