Set zone metadata during zone creation
Also incorporates fixes to the API specification sent separately
to the PowerDNS Auth repository

--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -33,6 +33,10 @@
           kind: 'Native'
           nameservers:
             - 'ns.example.'
+        metadata:
+          allow_axfr_from: ['AUTO-NS']
+          ixfr: true
+          axfr_source: '127.0.0.1'
 
     - name: check zone kind change from 'Native' to 'Master'
       pdns_auth_zone:
