--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -37,6 +37,15 @@
           allow_axfr_from: ['AUTO-NS']
           ixfr: true
           axfr_source: '127.0.0.1'
+      register: result
+      failed_when:
+        - result.changed != true
+        - result.zone.name != d2.example.
+        - result.zone.kind != 'Native'
+        - result.zone.nameservers[0] != 'ns.example.'
+        - result.zone.metadata.allow_axfr_from[0] != 'AUTO-NS'
+        - result.zone.metadata.ixfr != true
+        - result.zone.metadata.axfr_source != '127.0.0.1'
 
     - name: check zone kind change from 'Native' to 'Master'
       pdns_auth_zone:
@@ -45,6 +54,10 @@
         state: present
         properties:
           kind: 'Master'
+      register: result
+      failed_when:
+        - result.changed != true
+        - result.zone.kind != 'Master'
 
     - name: check zone metadata change
       pdns_auth_zone:
@@ -58,18 +71,32 @@
           ixfr: false
           axfr_source: '127.0.0.8'
           slave_renotify: true
+      register: result
+      failed_when:
+        - result.changed != true
+        - result.zone.metadata.allow_axfr_from[0] != 'AUTO-NS'
+        - result.zone.metadata.allow_axfr_from[1] != '::'
+        - result.zone.metadata.ixfr != false
+        - result.zone.metadata.axfr_source != '127.0.0.8'
+        - result.zone.metadata.slave_renotify != true
 
     - name: check notify for zone
       pdns_auth_zone:
         <<: *common
         name: d2.example.
         state: notify
+      register: result
+      failed_when:
+        - result.changed != true
 
     - name: check zone removal
       pdns_auth_zone:
         <<: *common
         name: d2.example.
         state: absent
+      register: result
+      failed_when:
+        - result.changed != true
 
     - name: check 'Slave' zone creation
       pdns_auth_zone:
@@ -81,6 +108,13 @@
           masters:
             - '1.1.1.1'
             - '::1'
+      register: result
+      failed_when:
+        - result.changed != true
+        - result.zone.name != d3.example.
+        - result.zone.kind != 'Slave'
+        - result.zone.masters[0] != '1.1.1.1'
+        - result.zone.masters[1] != '::1'
 
     - name: check slave zone retrieval
       pdns_auth_zone:
@@ -93,3 +127,6 @@
         <<: *common
         name: d3.example.
         state: absent
+      register: result
+      failed_when:
+        - result.changed != true
