--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
     - master
+    - 'branch-[1-9]+.[0-9]+'
+    tags:
+    - 'v[1-9]+.[0-9]+.[0-9]+'
     paths:
     - 'pdns_auth_zone.py'
     - 'api-swagger.json'
