--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,10 @@ on:
     - 'v[1-9]+.[0-9]+.[0-9]+'
     paths:
     - 'pdns_auth_zone.py'
+    - 'pdns_auth_tsigkey.py'
     - 'api-swagger.json'
-    - 'tests/playbook.yml'
+    - 'tests/test-paz-playbook.yml'
+    - 'tests/test-patk-playbook.yml'
     - 'tests/start_server.sh'
     - '.github/workflows/ci.yml'
   pull_request:
@@ -18,8 +20,11 @@ on:
     - master
     paths:
     - 'pdns_auth_zone.py'
+    - 'pdns_auth_tsigkey.py'
     - 'api-swagger.json'
     - 'tests/playbook.yml'
+    - 'tests/test-paz-playbook.yml'
+    - 'tests/test-patk-playbook.yml'
     - 'tests/start_server.sh'
     - '.github/workflows/ci.yml'
   repository_dispatch:
@@ -38,5 +43,7 @@ jobs:
       uses: actions/checkout@v2
     - name: start pdns_server
       run: tests/start_server.sh
-    - name: run test playbook
-      run: /ansible/bin/ansible-playbook -M . -i localhost, tests/playbook.yml
+    - name: run test playbook for pdns_auth_zone
+      run: /ansible/bin/ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
+    - name: run test playbook for pdns_auth_tsigkey
+      run: /ansible/bin/ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
