Add support for metadata-in-zone properties
A number of documented 'metadata' items are actually set and retrieved
as properties of zone records, so this commit adds support for them.
This distinction is hidden from the module user; all metadata items
are provided and returned in the 'metadata' dictionary.

--- a/tests/test-patk-playbook.yml
+++ b/tests/test-patk-playbook.yml
@@ -85,3 +85,14 @@
       failed_when:
         - result.failed == true
         - result.changed != true
+
+    - name: leave key for zone tests
+      pdns_auth_tsigkey:
+        <<: *common
+        name: axfr-key
+        state: present
+      register: result
+      failed_when:
+        - result.failed == true
+        - result.key.exists == false
+        - result.key.algoritm != 'hmac-md5'
