--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,11 @@ jobs:
       uses: actions/checkout@v2
     - name: start pdns_server
       run: tests/start_server.sh
-    - name: run test playbook for pdns_auth_tsigkey
-      run: /ansible/bin/ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
-    - name: run test playbook for pdns_auth_zone
-      run: /ansible/bin/ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
+    - name: run tests with Python 3.5
+      run: tox -epy35-ansible --workdir /root/tox
+    - name: run tests with Python 3.6
+      run: tox -epy36-ansible --workdir /root/tox
+    - name: run tests with Python 3.7
+      run: tox -epy37-ansible --workdir /root/tox
+    - name: run tests with Python 3.8
+      run: tox -epy38-ansible --workdir /root/tox
