Whitelist 'bash' in tox.ini for lint environment

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
     ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
 [testenv:lint]
+whitelist_externals=bash
 deps=
     black
     flake8
