--- a/tests/test-patk-playbook.yml
+++ b/tests/test-patk-playbook.yml
@@ -2,7 +2,7 @@
   connection: local
   gather_facts: no
   vars:
-    ansible_python_interpreter: /ansible/bin/python
+    ansible_python_interpreter: python
     common_args: &common
       api_key: foo
       api_spec_file: ../api-swagger.json
