--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -39,7 +39,7 @@ jobs:
     needs: build-tox
     strategy:
       matrix:
-        pdns: [4.2, 4.3, master]
+        pdns: [4.2, 4.3, 4.4, master]
     steps:
     - name: checkout code
       uses: actions/checkout@v2
