Revert Bravado to 10.6.0
Version 10.6.1 breaks JSON response handling for at least one
API call

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist=NONE
 skipsdist=True
 [ansible-base]
 deps=
-    bravado
+    bravado==10.6.0
     ansible
 commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
