--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - master
     paths:
+    - 'tox.ini'
     - 'tests/make_tox_container.sh'
     - 'tests/make_pdns_container.sh'
     - '.github/workflows/build-image.yml'
@@ -12,6 +13,7 @@ on:
     branches:
     - master
     paths:
+    - 'tox.ini'
     - 'tests/make_tox_container.sh'
     - 'tests/make_pdns_container.sh'
     - '.github/workflows/build-image.yml'
