--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist=NONE
 skipsdist=True
 [ansible-base]
 deps=
-    bravado==10.6.0
+    bravado
     ansible
 commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
