Revert swagger-spec-validator to 2.6.0

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skipsdist=True
 deps=
     bravado
     ansible
+    swagger-spec-validator==2.6.0
 commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
     ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
