Correct syntax for shell commands in tox.ini
Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,8 @@ deps=
     flake8
     lintly
 commands=
-    bash -c \'flake8 --ignore=E501,E402,E231 | lintly --format=flake8\'
-    bash -c \'black --check | lintly --format=black\'
+    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8'
+    bash -c 'black --check | lintly --format=black'
 [testenv:py35-ansible]
 deps =
     {[ansible-base]deps}
