--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,8 @@ deps=
     flake8
     lintly
 commands=
-    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8'
-    bash -c 'black --check | lintly --format=black'
+    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --commit-sha=${{ github.event.pull_request.head.sha }}'
+    bash -c 'black --check . | lintly --format=black --commit-sha=${{ github.event.pull_request.head.sha }}'
 [testenv:py35-ansible]
 deps =
     {[ansible-base]deps}
