--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,11 +16,7 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v2
-    - name: test lintly
-      run: lintly --log < tox.ini
+    - name: run lint tests
+      run: tox -elint --workdir /root/tox
       env:
         LINTLY_API_KEY: ${{ secrets.LINTLY_TOKEN }}
-#    - name: run lint tests
-#      run: tox -elint --workdir /root/tox
-#      env:
-#        LINTLY_API_KEY: ${{ secrets.LINTLY_TOKEN }}
