--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,10 +16,8 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v2
-    - name: install Python
-      uses: actions/setup-python@v2
     - name: test 1
-      run: python -m pip install flake8 lintly
+      run: python3 -m pip install flake8 lintly
     - name: test 2
       run: 'flake8 | lintly --log --format=flake8'
       env:
