--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ deps=
     flake8
     lintly
 commands=
-    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --log --format=flake8'
+    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8'
+    bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black'
 [testenv:py35-ansible]
 deps =
     {[ansible-base]deps}
