--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v2
     - name: run lint tests
-      run: tox -elint --workdir /root/tox
+      run: tox -elint-action --workdir /root/tox
       env:
         LINTLY_API_KEY: ${{ secrets.LINTLY_TOKEN }}
         TOX_TESTENV_PASSENV: GITHUB_* LINTLY_API_KEY
