--- a/tox.ini
+++ b/tox.ini
@@ -9,15 +9,22 @@ deps=
 commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
     ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
-[testenv:lint]
+[testenv:lint-action]
 whitelist_externals=bash
 deps=
     black
     flake8
     lintly
 commands=
-    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8'
-    bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black'
+    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --no-request-changes'
+    bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black --no-request-changes'
+[testenv:lint]
+deps=
+    black
+    flake8
+commands=
+    flake8 --ignore=E501,E402,E231
+    black --check .
 [testenv:py35-ansible]
 deps =
     {[ansible-base]deps}
