--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
     ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
 [testenv:lint-action]
+ignore_errors=true
 whitelist_externals=bash
 deps=
     black
