--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ commands=
 [testenv:lint-action]
 ignore_errors=true
 whitelist_externals=bash
+passenv=GITHUB_* LINTLY_API_KEY
 deps=
     black
     flake8
