--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=NONE
+envlist=lint
 skipsdist=True
 [ansible-base]
 deps=
@@ -27,11 +27,6 @@ deps=
 commands=
     flake8 --ignore=E501,E402,E231
     black --check .
-[testenv:py35-ansible]
-deps =
-    {[ansible-base]deps}
-commands =
-    {[ansible-base]commands}
 [testenv:py36-ansible]
 deps =
     {[ansible-base]deps}
