Various non-functional cleanups
* Python 3.5 support removed.

* Updated name of token used by Lintly.

* Renamed 'lint' environment in tox.ini to lint-action and added manual 'lint' environment.

* Display commands in log when images are being built.

* Additional cleanup during image builds to reduce image sizes.

* Use 2 CPUs when building Python from source.

* Reduce size of Python builds and disable shared library.

* Ensure that environment variables for GitHub Actions are passed into lint-action tox environment.

Signed-off-by: Kevin P. Fleming <kevin@km6g.us>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=NONE
+envlist=lint
 skipsdist=True
 [ansible-base]
 deps=
@@ -9,20 +9,24 @@ deps=
 commands=
     ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
     ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
-[testenv:lint]
+[testenv:lint-action]
+ignore_errors=true
 whitelist_externals=bash
+passenv=GITHUB_* LINTLY_API_KEY
 deps=
     black
     flake8
     lintly
 commands=
-    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8'
-    bash -c 'black --check | lintly --format=black'
-[testenv:py35-ansible]
-deps =
-    {[ansible-base]deps}
-commands =
-    {[ansible-base]commands}
+    bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --no-request-changes'
+    bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black --no-request-changes'
+[testenv:lint]
+deps=
+    black
+    flake8
+commands=
+    flake8 --ignore=E501,E402,E231
+    black --check .
 [testenv:py36-ansible]
 deps =
     {[ansible-base]deps}
