--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,6 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v2
     - name: run lint tests
-      run: tox -elint --workdir /root/tox
+      run: tox -elint-action --workdir /root/tox
       env:
-        LINTLY_API_KEY: ${{ secrets.GITHUB_TOKEN }}
+        LINTLY_API_KEY: ${{ secrets.LINTLY_TOKEN }}
