*Really* add Python 3.9.0 testing

--- a/tox.ini
+++ b/tox.ini
@@ -42,3 +42,8 @@ deps =
     {[ansible-base]deps}
 commands =
     {[ansible-base]commands}
+[testenv:py39-ansible]
+deps =
+    {[ansible-base]deps}
+commands =
+    {[ansible-base]commands}
