--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ deps=
     ansible
     swagger-spec-validator==2.6.0
 commands=
-    ansible-playbook -M . -i localhost, tests/test-patk-playbook.yml
-    ansible-playbook -M . -i localhost, tests/test-paz-playbook.yml
+    ansible-playbook -M . -i localhost, tests/test-patk-pdns-{env:pdns_version}.yml
+    ansible-playbook -M . -i localhost, tests/test-paz-pdns-{env:pdns_version}.yml
 [testenv:lint-action]
 ignore_errors=true
 whitelist_externals=bash
@@ -27,22 +27,7 @@ deps=
 commands=
     flake8 --ignore=E501,E402,E231
     black --check .
-[testenv:py36-ansible]
-deps =
-    {[ansible-base]deps}
-commands =
-    {[ansible-base]commands}
-[testenv:py37-ansible]
-deps =
-    {[ansible-base]deps}
-commands =
-    {[ansible-base]commands}
-[testenv:py38-ansible]
-deps =
-    {[ansible-base]deps}
-commands =
-    {[ansible-base]commands}
-[testenv:py39-ansible]
+[testenv:py{36,37,38,39}-ansible]
 deps =
     {[ansible-base]deps}
 commands =
