Rename default branch

--- a/.github/workflows/build-image-and-ci-pr.yml
+++ b/.github/workflows/build-image-and-ci-pr.yml
@@ -7,7 +7,7 @@ on:
     - reopened
     - synchronize
     branches:
-    - develop
+    - main
     paths:
     - 'tox.ini'
     - 'tests/make_*_container.sh'
