--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -41,7 +41,7 @@ jobs:
         python: [py36, py37, py38, py39]
       fail-fast: false
     container:
-      image: docker://quay.io/apaa-test-images/pdns-${{ matrix.pdns }}:pr${{ github.event.pull_request.number }}
+      image: docker://quay.io/apaa-test-images/pdns-${{ matrix.pdns }}:main
     steps:
     - name: checkout code
       uses: actions/checkout@v2
