--- a/tests/test-paz-api-http.yml
+++ b/tests/test-paz-api-http.yml
@@ -39,6 +39,42 @@
         msg: "success"
       failed_when: result.failed != true
 
+    - name: check for failure during zone creation without properties
+      pdns_auth_zone:
+        <<: *common
+        name: d2.example.
+        state: present
+      ignore_errors: true
+      register: result
+
+    - name: display result
+      debug:
+        var: "result"
+
+    - name: check result
+      debug:
+        msg: "success"
+      failed_when: result.failed != true
+
+    - name: check for failure during zone creation without soa
+      pdns_auth_zone:
+        <<: *common
+        name: d2.example.
+        state: present
+        properties:
+          kind: 'Native'
+      ignore_errors: true
+      register: result
+
+    - name: display result
+      debug:
+        var: "result"
+
+    - name: check result
+      debug:
+        msg: "success"
+      failed_when: result.failed != true
+
     - name: check 'Native' zone creation
       pdns_auth_zone:
         <<: *common
@@ -48,6 +84,9 @@
           kind: 'Native'
           nameservers:
             - 'ns.example.'
+          soa:
+            mname: 'localhost.'
+            rname: 'hostmaster.localhost.'
         metadata:
           allow_axfr_from:
             - 'AUTO-NS'
@@ -128,8 +167,6 @@
         <<: *common
         name: d2.example.
         state: present
-        properties:
-          kind: 'Master'
         metadata:
           allow_axfr_from:
             - 'AUTO-NS'
